@@ -41,6 +41,8 @@ public class Soiled extends StdAbility
 		return "Soiled";
 	}
 
+	protected boolean dirtyFlag = false;
+
 	private final static String	localizedName	= CMLib.lang().L("Soiled");
 
 	@Override
@@ -50,10 +52,13 @@ public class Soiled extends StdAbility
 	}
 
 	private final static String	localizedStaticDisplay	= CMLib.lang().L("(Soiled)");
+	private final static String	localizedStaticDisplay2	= CMLib.lang().L("(Dirty)");
 
 	@Override
 	public String displayText()
 	{
+		if(dirtyFlag)
+			return localizedStaticDisplay2;
 		return localizedStaticDisplay;
 	}
 
@@ -117,34 +122,58 @@ public class Soiled extends StdAbility
 			if(E instanceof MOB)
 			{
 				final MOB mob=(MOB)E;
-				mob.tell(L("You are no longer soiled."));
+				if(dirtyFlag)
+					mob.tell(L("You are no longer dirty."));
+				else
+					mob.tell(L("You are no longer soiled."));
 				final MOB following=((MOB)E).amFollowing();
 				if((following!=null)
 				&&(following.location()==mob.location())
 				&&(CMLib.flags().isInTheGame(mob,true))
 				&&(CMLib.flags().canBeSeenBy(mob,following)))
-					following.tell(L("@x1 is no longer soiled.",E.name()));
+				{
+					if(dirtyFlag)
+						following.tell(L("@x1 is no longer dirty.",E.name()));
+					else
+						following.tell(L("@x1 is no longer soiled.",E.name()));
+				}
 			}
 			else
 			if((E instanceof Item)&&(((Item)E).owner() instanceof MOB))
-				((MOB)((Item)E).owner()).tell(L("@x1 is no longer soiled.",E.name()));
+			{
+				if(dirtyFlag)
+					((MOB)((Item)E).owner()).tell(L("@x1 is no longer dirty.",E.name()));
+				else
+					((MOB)((Item)E).owner()).tell(L("@x1 is no longer soiled.",E.name()));
+			}
 		}
 	}
 
-	public String getDiaperSmell()
+	public String getDiaperSmell(final boolean periodic)
 	{
-		switch(CMLib.dice().roll(1,5,0))
+		if((affected instanceof MOB)||(affected instanceof CagedAnimal))
 		{
-		case 1:
-			return L("<T-NAME> is stinky!");
-		case 2:
-			return L("<T-NAME> smells like poo.");
-		case 3:
-			return L("<T-NAME> <T-HAS-HAVE> soiled <T-HIM-HERSELF>.");
-		case 4:
-			return L("Whew! <T-NAME> stinks!");
-		case 5:
-			return L("<T-NAME> must have let one go!");
+			switch(CMLib.dice().roll(1,5,0))
+			{
+			case 1:
+				return L("<T-NAME> is stinky!");
+			case 2:
+				return L("<T-NAME> smells like poo.");
+			case 3:
+				return L("<T-NAME> <T-HAS-HAVE> soiled <T-HIM-HERSELF>.");
+			case 4:
+				return L("Whew! <T-NAME> stinks!");
+			case 5:
+				return L("<T-NAME> must have let one go!");
+			}
+		}
+		else
+		if(!periodic)
+		{
+			if(dirtyFlag)
+				return L("<T-NAME> smells dirty.");
+			else
+				return L("Whew! <T-NAME> stinks!");
 		}
 		return null;
 	}
@@ -177,14 +206,33 @@ public class Soiled extends StdAbility
 			&&(((Drink)((Item)affected).container()).containsDrink()))
 				unInvoke();
 		}
-		if((msg.target()==affected)
-		&&(msg.targetMinor()==CMMsg.TYP_SNIFF))
+		if(msg.target()==affected)
 		{
-			final Physical target=(affected==null)?((myHost instanceof Physical)?(Physical)myHost:msg.source()):affected;
-			final String smell=getDiaperSmell();
-			if((CMLib.flags().canSmell(msg.source()))&&(smell!=null))
-				msg.source().tell(msg.source(),target,null,smell);
+			if(msg.targetMinor()==CMMsg.TYP_SNIFF)
+			{
+				final Physical target=(affected==null)?((myHost instanceof Physical)?(Physical)myHost:msg.source()):affected;
+				final String smell=getDiaperSmell(false);
+				if((smell!=null)&&(CMLib.flags().canSmell(msg.source())))
+					msg.source().tell(msg.source(),target,null,smell);
+			}
+			else
+			if((dirtyFlag)
+			&&((msg.targetMinor()==CMMsg.TYP_LOOK)||(msg.targetMinor()==CMMsg.TYP_EXAMINE))
+			&&(CMLib.flags().canBeSeenBy(affected,msg.source())))
+			{
+				msg.addTrailerMsg(CMClass.getMsg(msg.source(),null,null,
+											  CMMsg.MSG_OK_VISUAL,L("\n\r@x1 is dirty.\n\r",affected.name(msg.source())),
+											  CMMsg.NO_EFFECT,null,
+											  CMMsg.NO_EFFECT,null));
+			}
 		}
+	}
+
+	@Override
+	public void setMiscText(final String newMiscText)
+	{
+		super.setMiscText(newMiscText);
+		this.dirtyFlag = CMParms.getParmBool(newMiscText, "DIRTY", false);
 	}
 
 	@Override
@@ -215,7 +263,7 @@ public class Soiled extends StdAbility
 					M.playerStats().setHygiene(10000);
 					M.recoverCharStats();
 				}
-				final String smell=getDiaperSmell();
+				final String smell=getDiaperSmell(true);
 				if((smell!=null)
 				&&(CMLib.flags().isInTheGame(M,true)))
 				{
@@ -250,7 +298,10 @@ public class Soiled extends StdAbility
 		Environmental msgTarget=target;
 		if(target instanceof CagedAnimal)
 			msgTarget=((CagedAnimal)target).unCageMe();
-		mob.location().show(mob,msgTarget,CMMsg.MSG_OK_VISUAL,L("<T-NAME> has soiled <T-HIM-HERSELF>!"));
+		if(dirtyFlag)
+			mob.location().show(mob,msgTarget,CMMsg.MSG_OK_VISUAL,L("<T-NAME> has gotten dirty!"));
+		else
+			mob.location().show(mob,msgTarget,CMMsg.MSG_OK_VISUAL,L("<T-NAME> has soiled <T-HIM-HERSELF>!"));
 		if(target instanceof MOB)
 		{
 			final Item pants=((MOB)target).fetchFirstWornItem(Wearable.WORN_WAIST);
