@@ -1,0 +1,77 @@
+package com.planet_ink.coffee_mud.Commands;
+import com.planet_ink.coffee_mud.core.interfaces.*;
+import com.planet_ink.coffee_mud.core.*;
+import com.planet_ink.coffee_mud.core.collections.*;
+import com.planet_ink.coffee_mud.Abilities.interfaces.*;
+import com.planet_ink.coffee_mud.Areas.interfaces.*;
+import com.planet_ink.coffee_mud.Behaviors.interfaces.*;
+import com.planet_ink.coffee_mud.CharClasses.interfaces.*;
+import com.planet_ink.coffee_mud.Commands.interfaces.*;
+import com.planet_ink.coffee_mud.Common.interfaces.*;
+import com.planet_ink.coffee_mud.Exits.interfaces.*;
+import com.planet_ink.coffee_mud.Items.interfaces.*;
+import com.planet_ink.coffee_mud.Libraries.interfaces.*;
+import com.planet_ink.coffee_mud.Locales.interfaces.*;
+import com.planet_ink.coffee_mud.MOBS.interfaces.*;
+import com.planet_ink.coffee_mud.Races.interfaces.*;
+
+import java.util.*;
+
+/*
+   Copyright 2022-2022 Bo Zimmerman
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+	   http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+*/
+public class History extends StdCommand
+{
+	public History()
+	{
+	}
+
+	private final String[] access=I(new String[]{"HISTORY"});
+	@Override
+	public String[] getAccessWords()
+	{
+		return access;
+	}
+
+	@Override
+	public boolean execute(final MOB mob, final List<String> commands, final int metaFlags)
+		throws java.io.IOException
+	{
+		if(mob.session()!=null)
+		{
+			int amount = 20;
+			if(commands.size()>1)
+			{
+				if(!CMath.isInteger(commands.get(1)))
+				{
+					mob.tell(L("@x1 is not a valid number."));
+					return false;
+				}
+				amount=CMath.s_int(commands.get(1));
+			}
+			int i=0;
+			for(final Enumeration<List<String>> e=mob.session().getHistory();e.hasMoreElements() && (i<amount);i++)
+				mob.tell("^H"+CMStrings.padRight(""+(i+1), 2)+": ^N"+CMParms.combineQuoted(e.nextElement(), 0));
+		}
+		return false;
+	}
+
+	@Override
+	public boolean canBeOrdered()
+	{
+		return true;
+	}
+
+}
