@@ -1,0 +1,99 @@
+package com.planet_ink.coffee_mud.Commands;
+import com.planet_ink.coffee_mud.core.interfaces.*;
+import com.planet_ink.coffee_mud.core.*;
+import com.planet_ink.coffee_mud.core.CMClass.CMObjectType;
+import com.planet_ink.coffee_mud.core.collections.*;
+import com.planet_ink.coffee_mud.Abilities.interfaces.*;
+import com.planet_ink.coffee_mud.Areas.interfaces.*;
+import com.planet_ink.coffee_mud.Behaviors.interfaces.*;
+import com.planet_ink.coffee_mud.CharClasses.interfaces.*;
+import com.planet_ink.coffee_mud.Commands.interfaces.*;
+import com.planet_ink.coffee_mud.Common.interfaces.*;
+import com.planet_ink.coffee_mud.Exits.interfaces.*;
+import com.planet_ink.coffee_mud.Items.interfaces.*;
+import com.planet_ink.coffee_mud.Libraries.interfaces.*;
+import com.planet_ink.coffee_mud.Locales.interfaces.*;
+import com.planet_ink.coffee_mud.MOBS.interfaces.*;
+import com.planet_ink.coffee_mud.Races.interfaces.*;
+
+import java.util.*;
+
+/*
+   Copyright 2022-2022 Bo Zimmerman
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+	   http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+*/
+public class MPCommand extends StdCommand
+{
+	public MPCommand()
+	{
+	}
+
+	private String[] access=I(new String[]{"MPCOMMAND"});
+	@Override
+	public String[] getAccessWords()
+	{
+		if(access.length==1)
+		{
+			final ArrayList<String> allCmds = new ArrayList<String>();
+			for(final String str : ScriptingEngine.methods)
+			{
+				if(str.startsWith("MP"))
+					allCmds.add(str);
+			}
+			if(allCmds.size()>1)
+				access = allCmds.toArray(new String[allCmds.size()]);
+		}
+		return access;
+	}
+
+	private void executeScript(final MOB mob, final String script)
+	{
+		final ScriptingEngine S=(ScriptingEngine)CMClass.getCommon("DefaultScriptingEngine");
+		S.setSavable(false);
+		S.setVarScope("*");
+		S.setScript(script);
+		final CMMsg msg2=CMClass.getMsg(mob,mob,null,CMMsg.MSG_OK_VISUAL,null,null,L("MPRUN"));
+		S.executeMsg(mob, msg2);
+		S.dequeResponses();
+		S.tick(mob,Tickable.TICKID_MOB);
+	}
+
+	@Override
+	public boolean execute(final MOB mob, final List<String> commands, final int metaFlags)
+		throws java.io.IOException
+	{
+		final String script = "IMASK_PROG P MPRUN\n"+CMParms.combineQuoted(commands, 0)+"\n~\n";
+		executeScript(mob, script);
+		return false;
+	}
+
+	@Override
+	public boolean canBeOrdered()
+	{
+		return false;
+	}
+
+	@Override
+	public boolean securityCheck(final MOB mob)
+	{
+		return CMSecurity.isAllowed(mob,mob.location(),CMSecurity.SecFlag.JSCRIPTS);
+	}
+
+	@Override
+	public int compareTo(final CMObject o)
+	{
+		return CMClass.classID(this).compareToIgnoreCase(CMClass.classID(o));
+	}
+
+}
