@@ -1471,6 +1471,13 @@ differences.  To mask the types of objects checked, the user can specify mobs, i
 or the whole rooms after the word database, and a zappermask can be included after the \
 mask parameters.
 
+MPCOMMAND=\
+Command : MPCOMMAND\n\r\
+Usage   : MPxxx ([ARGUMENT]...)\n\r\
+Example : MPECHO bob\n\r\
+Short(s): \n\r\
+Execute an MP command from the command line, for what that's worth.
+
 EXPORT=\
 Command : EXPORT\n\r\
 Usage   : EXPORT (AREA/ROOM/WORLD) (DATA/ITEMS/MOBS/WEAPONS/ARMOR) ([FILE]/SCREEN/EMAIL)\n\r\
