@@ -104,10 +104,11 @@ Travel towards the rear left of a ship.
 
 ALIAS=\
 Command : ALIAS\n\r\
-Usage   : ALIAS (DEFINE [KEY] ([COMMANDS]))\n\r\
+Usage   : ALIAS (DEFINE/TEST [KEY] ([COMMANDS]))\n\r\
 Example : alias\n\r\
 Example : alias define fk flykick\n\r\
 Example : alias define fk\n\r\
+Example : alias test fk args\n\r\
 Short(s): \n\r\
 This command will allow a player to manage a list of alias command \
 strings.  Any command string a player enters which begins with one \
@@ -122,7 +123,7 @@ the alias are also appended to each command in the alias definition. \n\r\
 New aliases can also be added or removed on the command line using the \
 define argument.  The alias key is always required for a define, but \
 you can also give the aliased commands to add, or leave them out to remove \
-the key.
+the key.  They can then be tested by using the TEST argument.
 
 AREAS=\
 Command : AREAS\n\r\
@@ -1437,6 +1438,13 @@ Usage   : HELPLIST [STRING PATTERN]\n\r\
 Example : help pray\n\r\
 Short(s): \n\r\
 Shows you a list of all help entries matching the given string pattern.
+
+HISTORY=\
+Command : HISTORY\n\r\
+Usage   : HISTORY ([NUMBER])\n\r\
+Example : history\n\r\
+Short(s): \n\r\
+Shows you a list of your previously entered commands, starting with the most recent.
 
 HOLD=\
 Command : HOLD\n\r\
